[gd_scene load_steps=7 format=2]

[ext_resource path="res://Boat.tscn" type="PackedScene" id=1]
[ext_resource path="res://Materials/watermaterial.tres" type="Material" id=2]
[ext_resource path="res://Scripts/Water.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=4]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=5]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )
subdivide_width = 800
subdivide_depth = 800

[node name="World" type="Spatial"]

[node name="WaterPlane" type="MeshInstance" parent="."]
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.798541, 0.48698, -0.353812, 0, 0.587785, 0.809017, 0.60194, -0.646033, 0.469371, 0, 8, 0 )
shadow_enabled = true

[node name="SpringArm" type="SpringArm" parent="."]
transform = Transform( 0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, -0.353553, 0.612372, 0, 2, 0 )
collision_mask = 2
spring_length = 32.0
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="SpringArm"]
fov = 60.0

[node name="Boat" parent="." instance=ExtResource( 1 )]

[node name="GUI" type="MarginContainer" parent="."]
margin_right = 240.0
margin_bottom = 491.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 484.0
custom_constants/separation = 10

[node name="Appearance" type="Panel" parent="GUI/VBoxContainer"]
margin_right = 220.0
margin_bottom = 196.0
rect_min_size = Vector2( 220, 196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GUI/VBoxContainer/Appearance"]
margin_left = 10.0
margin_top = 10.0
margin_right = 167.0
margin_bottom = 24.0
text = "Propiedades de aspecto:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Albedo" type="Label" parent="GUI/VBoxContainer/Appearance"]
margin_left = 10.0
margin_top = 35.0
margin_right = 167.0
margin_bottom = 49.0
text = "Albedo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color Labels" type="Label" parent="GUI/VBoxContainer/Appearance/Albedo"]
margin_left = 110.0
margin_right = 120.0
margin_bottom = 62.0
custom_constants/line_spacing = 10
text = "R
G
B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RBox" type="SpinBox" parent="GUI/VBoxContainer/Appearance/Albedo"]
margin_left = 126.0
margin_top = -6.0
margin_right = 200.0
margin_bottom = 18.0
hint_tooltip = "Color base del agua."
max_value = 1.0
step = 0.01
value = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GBox" type="SpinBox" parent="GUI/VBoxContainer/Appearance/Albedo"]
margin_left = 126.0
margin_top = 18.0
margin_right = 200.0
margin_bottom = 42.0
hint_tooltip = "Color base del agua."
max_value = 1.0
step = 0.01
value = 0.03
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BBox" type="SpinBox" parent="GUI/VBoxContainer/Appearance/Albedo"]
margin_left = 126.0
margin_top = 42.0
margin_right = 200.0
margin_bottom = 66.0
hint_tooltip = "Color base del agua."
max_value = 1.0
step = 0.01
value = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metallic" type="Label" parent="GUI/VBoxContainer/Appearance"]
margin_left = 10.0
margin_top = 110.0
margin_right = 167.0
margin_bottom = 124.0
text = "Metallic:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetalBox" type="SpinBox" parent="GUI/VBoxContainer/Appearance/Metallic"]
margin_left = 126.0
margin_top = -6.0
margin_right = 200.0
margin_bottom = 19.0
hint_tooltip = "Metalicidad del aspecto del agua."
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roughness" type="Label" parent="GUI/VBoxContainer/Appearance"]
margin_left = 10.0
margin_top = 138.0
margin_right = 167.0
margin_bottom = 152.0
text = "Roughness:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoughBox" type="SpinBox" parent="GUI/VBoxContainer/Appearance/Roughness"]
margin_left = 126.0
margin_top = -6.0
margin_right = 200.0
margin_bottom = 19.0
hint_tooltip = "Aspereza del aspecto del agua."
max_value = 1.0
step = 0.01
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fresnel" type="Label" parent="GUI/VBoxContainer/Appearance"]
margin_left = 10.0
margin_top = 166.0
margin_right = 167.0
margin_bottom = 180.0
text = "Factor Fresnel:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FresnelBox" type="SpinBox" parent="GUI/VBoxContainer/Appearance/Fresnel"]
margin_left = 126.0
margin_top = -6.0
margin_right = 200.0
margin_bottom = 19.0
hint_tooltip = "Cantidad de efecto de Fresnel en el agua."
max_value = 1.0
step = 0.01
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waves" type="Panel" parent="GUI/VBoxContainer"]
margin_top = 206.0
margin_right = 220.0
margin_bottom = 474.0
rect_min_size = Vector2( 220, 268 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GUI/VBoxContainer/Waves"]
margin_left = 10.0
margin_top = 10.0
margin_right = 167.0
margin_bottom = 24.0
text = "Propiedades de oleaje:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveA" type="Label" parent="GUI/VBoxContainer/Waves"]
margin_left = 10.0
margin_top = 37.0
margin_right = 59.0
margin_bottom = 51.0
text = "Ola A:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirXA" type="SpinBox" parent="GUI/VBoxContainer/Waves/WaveA"]
margin_left = 126.0
margin_top = -6.0
margin_right = 200.0
margin_bottom = 18.0
hint_tooltip = "Magnitud en X del oleaje."
min_value = -1.0
max_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirYA" type="SpinBox" parent="GUI/VBoxContainer/Waves/WaveA"]
margin_left = 126.0
margin_top = 18.0
margin_right = 200.0
margin_bottom = 42.0
hint_tooltip = "Magnitud en Y del oleaje."
min_value = -1.0
max_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteepnessA" type="SpinBox" parent="GUI/VBoxContainer/Waves/WaveA"]
margin_left = 126.0
margin_top = 42.0
margin_right = 200.0
margin_bottom = 66.0
hint_tooltip = "Empinamiento de Gerstner de la ola."
max_value = 1.0
step = 0.01
value = 0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WavelengthA" type="SpinBox" parent="GUI/VBoxContainer/Waves/WaveA"]
margin_left = 126.0
margin_top = 66.0
margin_right = 200.0
margin_bottom = 90.0
hint_tooltip = "Longitud de la ola."
value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveB" type="Label" parent="GUI/VBoxContainer/Waves"]
margin_left = 10.0
margin_top = 138.0
margin_right = 59.0
margin_bottom = 152.0
text = "Ola B:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirXB" type="SpinBox" parent="GUI/VBoxContainer/Waves/WaveB"]
margin_left = 126.0
margin_top = -6.0
margin_right = 200.0
margin_bottom = 18.0
hint_tooltip = "Magnitud en X del oleaje."
min_value = -1.0
max_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirYB" type="SpinBox" parent="GUI/VBoxContainer/Waves/WaveB"]
margin_left = 126.0
margin_top = 18.0
margin_right = 200.0
margin_bottom = 42.0
hint_tooltip = "Magnitud en Y del oleaje."
min_value = -1.0
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteepnessB" type="SpinBox" parent="GUI/VBoxContainer/Waves/WaveB"]
margin_left = 126.0
margin_top = 42.0
margin_right = 200.0
margin_bottom = 66.0
hint_tooltip = "Empinamiento de Gerstner de la ola."
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WavelengthB" type="SpinBox" parent="GUI/VBoxContainer/Waves/WaveB"]
margin_left = 126.0
margin_top = 66.0
margin_right = 200.0
margin_bottom = 90.0
hint_tooltip = "Longitud de la ola."
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeF" type="Label" parent="GUI/VBoxContainer/Waves"]
margin_left = 10.0
margin_top = 239.0
margin_right = 117.0
margin_bottom = 253.0
text = "Factor Temporal:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeFBox" type="SpinBox" parent="GUI/VBoxContainer/Waves/TimeF"]
margin_left = 126.0
margin_top = -6.0
margin_right = 200.0
margin_bottom = 19.0
hint_tooltip = "Rapidez de desplazamiento de las olas superficiales."
max_value = 1.0
step = 0.01
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="GUI/VBoxContainer/Appearance/Albedo/RBox" to="WaterPlane" method="_on_RBox_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Appearance/Albedo/GBox" to="WaterPlane" method="_on_GBox_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Appearance/Albedo/BBox" to="WaterPlane" method="_on_BBox_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Appearance/Metallic/MetalBox" to="WaterPlane" method="_on_MetalBox_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Appearance/Roughness/RoughBox" to="WaterPlane" method="_on_RoughBox_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Appearance/Fresnel/FresnelBox" to="WaterPlane" method="_on_FresnelBox_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveA/DirXA" to="WaterPlane" method="_on_DirXA_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveA/DirXA" to="Boat" method="_on_DirXA_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveA/DirYA" to="WaterPlane" method="_on_DirYA_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveA/DirYA" to="Boat" method="_on_DirYA_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveA/SteepnessA" to="WaterPlane" method="_on_SteepnessA_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveA/SteepnessA" to="Boat" method="_on_SteepnessA_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveA/WavelengthA" to="WaterPlane" method="_on_WavelengthA_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveA/WavelengthA" to="Boat" method="_on_WavelengthA_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveB/DirXB" to="WaterPlane" method="_on_DirXB_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveB/DirXB" to="Boat" method="_on_DirXB_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveB/DirYB" to="WaterPlane" method="_on_DirYB_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveB/DirYB" to="Boat" method="_on_DirYB_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveB/SteepnessB" to="WaterPlane" method="_on_SteepnessB_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveB/SteepnessB" to="Boat" method="_on_SteepnessB_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveB/WavelengthB" to="WaterPlane" method="_on_WavelengthB_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/WaveB/WavelengthB" to="Boat" method="_on_WavelengthB_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/Waves/TimeF/TimeFBox" to="WaterPlane" method="_on_TimeFBox_value_changed"]
